fix(input): fix textarea appearance on firefox and IE
Closes #1156

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -54,7 +54,7 @@ md-input-container {
    * The .md-input class is added to the input/textarea 
    */
   .md-input {
-    flex: 1;
+    flex: 1 1 auto;
     order: 2;
     display: block;
 
